# pcl_tree_detection

./: .gitignore  pcl.bash
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/tree_cylinder_lock/: .catkin
devel/.private/tree_cylinder_lock/lib/pkgconfig/: tree_cylinder_lock.pc
devel/.private/tree_cylinder_lock/lib/tree_cylinder_lock/: cylinder_pcd_node  cylinder_segmentation
devel/.private/tree_cylinder_lock/share/tree_cylinder_lock/cmake/: tree_cylinder_lockConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  tree_cylinder_lock.pc
devel/lib/tree_cylinder_lock/: cylinder_pcd_node  cylinder_segmentation
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/tree_cylinder_lock/cmake/: tree_cylinder_lockConfig-version.cmake  tree_cylinder_lockConfig.cmake
logs/tree_cylinder_lock/: build.check.000.log.stderr  build.make.001.log.stderr
src/tree_cylinder_lock/: CMakeLists.txt  package.xml
src/tree_cylinder_lock/launch/: forest_cylinder.launch  pcd_cylinder.launch
src/tree_cylinder_lock/scripts/: pcd_publisher.py
src/tree_cylinder_lock/src/: cylinder_lock_node.cpp  cylinder_pcd_node.cpp  cylinder_segmentation.cpp  forest_cylinder_node.cpp
src/trunk_detection/: CMakeLists.txt  package.xml
src/trunk_detection/launch/: cloud_accumulator.launch  trunk_detection.launch
src/trunk_detection/scripts/: centroid_markers.py  centroid_orbit.py  transform_utils.py
src/trunk_detection/src/: cloud_accumulator.cpp  cloud_cropped.cpp  cloud_processing.cpp  cloud_snapshot.cpp  fit_cyl.cpp
